--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Appie</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header>
+      <div class="container">
+        <nav class="nav">
+          <div class="header-links">
+            <img src="" alt="Appie-logo" />
+            <!-- logo icon-->
+            <ul class="nav-links">
+              <a href=""><li>Home</li></a>
+              <a href=""><li>Service</li></a>
+              <a href=""><li>Pages</li></a>
+              <a href=""><li>News</li></a>
+              <a href=""><li>Contact</li></a>
+            </ul>
+          </div>
+          <div class="nav-get-start">
+            <a href="" class="get-start">Get Start</a>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="section-hero">
+        <div class="container grid grid-2--cols">
+          <h1 class="hero-heading">
+            Ready to launch your app in one, <span>Application</span>
+          </h1>
+          <p class="hero-sub">Find the best application in the Appie</p>
+          <div class="hero-input">
+            <!-- Message icon -->
+            <input type="text" />
+            <!-- l-Arrow icon -->
+          </div>
+          <div class="hero-feedback">
+            <div class="feedback-imgs">
+              <!-- 4 imgs -->
+            </div>
+            <div class="feedback">
+              <h2>30k</h2>
+              <p>Feedback</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
