--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="feature-icon-background feature-1">
             <ion-icon
               class="feature-icon"
-              name="arrow-forward-outline"
+              name="flash"
             ></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
@@ -134,7 +134,7 @@
           <div class="feature-icon-background feature-2">
             <ion-icon
               class="feature-icon"
-              name="arrow-forward-outline"
+              name="home"
             ></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
@@ -153,7 +153,7 @@
           <div class="feature-icon-background feature-3">
             <ion-icon
               class="feature-icon"
-              name="arrow-forward-outline"
+              name="link"
             ></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
@@ -176,7 +176,7 @@
           <div class="feature-icon-background feature-4">
             <ion-icon
               class="feature-icon"
-              name="arrow-forward-outline"
+              name="notifications"
             ></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
@@ -195,7 +195,7 @@
           <div class="feature-icon-background feature-5">
             <ion-icon
               class="feature-icon"
-              name="arrow-forward-outline"
+              name="settings"
             ></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
@@ -214,7 +214,7 @@
           <div class="feature-icon-background feature-6">
             <ion-icon
               class="feature-icon"
-              name="arrow-forward-outline"
+              name="lock-closed"
             ></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
