--- a/index.html
+++ b/index.html
@@ -110,13 +110,10 @@
         </a>
       </div>
 
-      <div class="features-row">
+      <div class="features-grid">
         <div class="feature-item">
           <div class="feature-icon-background feature-1">
-            <ion-icon
-              class="feature-icon"
-              name="flash"
-            ></ion-icon>
+            <ion-icon class="feature-icon" name="flash"></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
           <p class="sub-header">
@@ -132,10 +129,7 @@
         </div>
         <div class="feature-item">
           <div class="feature-icon-background feature-2">
-            <ion-icon
-              class="feature-icon"
-              name="home"
-            ></ion-icon>
+            <ion-icon class="feature-icon" name="home"></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
           <p class="sub-header">
@@ -151,10 +145,7 @@
         </div>
         <div class="feature-item">
           <div class="feature-icon-background feature-3">
-            <ion-icon
-              class="feature-icon"
-              name="link"
-            ></ion-icon>
+            <ion-icon class="feature-icon" name="link"></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
           <p class="sub-header">
@@ -169,15 +160,10 @@
             ></ion-icon>
           </a>
         </div>
-      </div>
 
-      <div class="features-row">
         <div class="feature-item">
           <div class="feature-icon-background feature-4">
-            <ion-icon
-              class="feature-icon"
-              name="notifications"
-            ></ion-icon>
+            <ion-icon class="feature-icon" name="notifications"></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
           <p class="sub-header">
@@ -193,10 +179,7 @@
         </div>
         <div class="feature-item">
           <div class="feature-icon-background feature-5">
-            <ion-icon
-              class="feature-icon"
-              name="settings"
-            ></ion-icon>
+            <ion-icon class="feature-icon" name="settings"></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
           <p class="sub-header">
@@ -212,10 +195,7 @@
         </div>
         <div class="feature-item">
           <div class="feature-icon-background feature-6">
-            <ion-icon
-              class="feature-icon"
-              name="lock-closed"
-            ></ion-icon>
+            <ion-icon class="feature-icon" name="lock-closed"></ion-icon>
           </div>
           <h3 class="feature-header">Fast and intuitive</h3>
           <p class="sub-header">
